Fix archive file name

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -55,15 +55,18 @@ jobs:
           - os: ubuntu-latest
             short_name: linux
             runtime: linux-x64
-            artifact_name: tippy-linux-x64.tar.gz
+            artifact_name: tippy-linux-x64
+            artifact_full_name: tippy-linux-x64.tar.gz
           - os: windows-latest
             short_name: win
             runtime: win-x64
-            artifact_name: tippy-win-x64.zip
+            artifact_name: tippy-win-x64
+            artifact_full_name: tippy-win-x64.zip
           - os: macos-latest
             short_name: mac
             runtime: osx-x64
-            artifact_name: tippy-osx-x64.zip
+            artifact_name: tippy-osx-x64
+            artifact_full_name: tippy-osx-x64.zip
 
     steps:
     - name: Load upload URL file
@@ -92,18 +95,18 @@ jobs:
     - name: Publish
       run: |
         dotnet publish src/Tippy/Tippy.csproj -c Release -r ${{ matrix.runtime }} /p:PublishSingleFile=true /p:IncludeNativeLibrariesForSelfExtract=true -o ./bin/publish/${{ matrix.artifact_name }}
-        chmod +x ./bin/publish/${{ matrix.artifact_name }}/BinDeps/${{ matrix.short_name }}/ckb*
+        chmod +x ./bin/publish/${{ matrix.artifact_full_name }}/BinDeps/${{ matrix.short_name }}/ckb*
     - name: Archive files zip
       if: matrix.short_name != 'linux'
       uses: papeloto/action-zip@v1
       with:
         files: ./bin/publish/${{ matrix.artifact_name }}
-        dest: release/${{ matrix.artifact_name }}
+        dest: release/${{ matrix.artifact_full_name }}
     - name: Archive files tar
       if: matrix.short_name == 'linux'
-      run: tar -cvf release/${{ matrix.artifact_name }} ./bin/publish/${{ matrix.artifact_name }}
+      run: tar -cvf release/${{ matrix.artifact_full_name }} ./bin/publish/${{ matrix.artifact_name }}
     - name: Generate checksum
-      run: sha256sum release/${{ matrix.artifact_name }} > release/${{ matrix.artifact_name }}.sha256.txt
+      run: sha256sum release/${{ matrix.artifact_full_name }} > release/${{ matrix.artifact_full_name }}.sha256.txt
     - name: Upload binary
       id: upload-release-binary
       uses: actions/upload-release-asset@v1
@@ -111,8 +114,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.get_upload_url.outputs.upload_url }}
-        asset_path: release/${{ matrix.artifact_name }}
-        asset_name: ${{ matrix.artifact_name }}
+        asset_path: release/${{ matrix.artifact_full_name }}
+        asset_name: ${{ matrix.artifact_full_name }}
         asset_content_type: application/zip
     - name: Upload checksum
       id: upload-release-checksum
@@ -121,6 +124,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.get_upload_url.outputs.upload_url }}
-        asset_path: release/${{ matrix.artifact_name }}.sha256.txt
-        asset_name: ${{ matrix.artifact_name }}.sha256.txt
+        asset_path: release/${{ matrix.artifact_full_name }}.sha256.txt
+        asset_name: ${{ matrix.artifact_full_name }}.sha256.txt
         asset_content_type: text/plain
