--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -95,7 +95,7 @@ jobs:
     - name: Publish
       run: |
         dotnet publish src/Tippy/Tippy.csproj -c Release -r ${{ matrix.runtime }} /p:PublishSingleFile=true /p:IncludeNativeLibrariesForSelfExtract=true -o ./bin/publish/${{ matrix.artifact_name }}
-        chmod +x ./bin/publish/${{ matrix.artifact_full_name }}/BinDeps/${{ matrix.short_name }}/ckb*
+        chmod +x ./bin/publish/${{ matrix.artifact_name }}/BinDeps/${{ matrix.short_name }}/ckb*
     - name: Archive files zip
       if: matrix.short_name != 'linux'
       uses: papeloto/action-zip@v1
