--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -101,12 +101,12 @@ jobs:
       uses: papeloto/action-zip@v1
       with:
         files: ./bin/publish/${{ matrix.artifact_name }}
-        dest: release/${{ matrix.artifact_full_name }}
+        dest: ${{ matrix.artifact_full_name }}
     - name: Archive files tar
       if: matrix.short_name == 'linux'
-      run: tar -cvf release/${{ matrix.artifact_full_name }} ./bin/publish/${{ matrix.artifact_name }}
+      run: tar -cvf ${{ matrix.artifact_full_name }} ./bin/publish/${{ matrix.artifact_name }}
     - name: Generate checksum
-      run: sha256sum release/${{ matrix.artifact_full_name }} > release/${{ matrix.artifact_full_name }}.sha256.txt
+      run: sha256sum ${{ matrix.artifact_full_name }} > ${{ matrix.artifact_full_name }}.sha256.txt
     - name: Upload binary
       id: upload-release-binary
       uses: actions/upload-release-asset@v1
@@ -114,7 +114,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.get_upload_url.outputs.upload_url }}
-        asset_path: release/${{ matrix.artifact_full_name }}
+        asset_path: ${{ matrix.artifact_full_name }}
         asset_name: ${{ matrix.artifact_full_name }}
         asset_content_type: application/zip
     - name: Upload checksum
@@ -124,6 +124,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.get_upload_url.outputs.upload_url }}
-        asset_path: release/${{ matrix.artifact_full_name }}.sha256.txt
+        asset_path: ${{ matrix.artifact_full_name }}.sha256.txt
         asset_name: ${{ matrix.artifact_full_name }}.sha256.txt
         asset_content_type: text/plain
