Restore publish condition

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,13 +4,12 @@ on:
   pull_request:
     branches:
       - main
-    # types: [closed]
+    types: [closed]
 
 jobs:
   release:
     name: Publish
-    #if: github.event.pull_request.merged == true && startsWith(github.event.pull_request.head.ref, 'release/')
-    if: startsWith(github.event.pull_request.head.ref, 'release/')
+    if: github.event.pull_request.merged == true && startsWith(github.event.pull_request.head.ref, 'release/')
     runs-on: ubuntu-latest
     steps:
     - name: Get tag
@@ -45,8 +44,7 @@ jobs:
   publish:
     name: Publish ${{ matrix.runtime }}
     needs: [release]
-    # if: github.event.pull_request.merged == true && startsWith(github.event.pull_request.head.ref, 'release/')
-    if: startsWith(github.event.pull_request.head.ref, 'release/')
+    if: github.event.pull_request.merged == true && startsWith(github.event.pull_request.head.ref, 'release/')
     runs-on: ubuntu-latest
 
     strategy:
