Fix osx/package-osx script

--- a/tools/osx/Info.plist
+++ b/tools/osx/Info.plist
@@ -2,12 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>CFBundleIconFile</key>
-    <string>todo.icns</string>
-    <key>CFBundleIdentifier</key>
-    <string>com.nervos.tippy</string>
     <key>CFBundleName</key>
     <string>Tippy</string>
+    <key>CFBundleIdentifier</key>
+    <string>com.nervos.tippy</string>
+    <key>CFBundleIconFile</key>
+    <string>Tippy.icns</string>
     <key>CFBundleVersion</key>
     <string>0.1.1</string>
     <key>CFBundleShortVersionString</key>
