--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+Tippy.app
+tippy-osx-x64
+
 # User-specific files
 *.rsuser
 *.suo
