--- a/tools/osx/Info.plist
+++ b/tools/osx/Info.plist
@@ -13,7 +13,7 @@
     <key>CFBundleShortVersionString</key>
     <string>0.1.1</string>
     <key>CFBundleExecutable</key>
-    <string>Tippy</string>
+    <string>main</string>
     <key>CFBundleInfoDictionaryVersion</key>
     <string>6.0</string>
     <key>CFBundlePackageType</key>
