--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+Tippy.dmg
 Tippy.app
 tippy-osx-x64
 
