--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -209,6 +209,8 @@ jobs:
         APPLE_ID: ${{ secrets.APPLE_ID }}
         APPLE_ID_PASSWORD: ${{ secrets.APPLE_ID_PASSWORD }}
       run: ./tools/osx/notarize.sh
+    - name: Staple dmg
+      run: xcrun stapler staple Tippy.dmg
     - name: Generate checksum
       run: shasum -a 256 Tippy.dmg > tippy-osx-x64-sha256.txt
     - name: Upload binary
