Add type serializers

--- a/tests/Ckb.Molecule.Tests/Ckb.Molecule.Tests.csproj
+++ b/tests/Ckb.Molecule.Tests/Ckb.Molecule.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Ckb.Cryptography\Ckb.Cryptography.csproj" />
     <ProjectReference Include="..\..\src\Ckb.Molecule\Ckb.Molecule.csproj" />
   </ItemGroup>
 
