--- a/src/Ckb.Cryptography/Ckb.Cryptography.csproj
+++ b/src/Ckb.Cryptography/Ckb.Cryptography.csproj
@@ -1,8 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <DebugType>embedded</DebugType>
   </PropertyGroup>
 
