Compute sUDT token's script hash and persist in db

--- a/src/Tippy/Tippy.csproj
+++ b/src/Tippy/Tippy.csproj
@@ -28,6 +28,8 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Ckb.Address\Ckb.Address.csproj" />
+    <ProjectReference Include="..\Ckb.Cryptography\Ckb.Cryptography.csproj" />
+    <ProjectReference Include="..\Ckb.Molecule\Ckb.Molecule.csproj" />
     <ProjectReference Include="..\Tippy.Core\Tippy.Core.csproj" />
     <ProjectReference Include="..\Tippy.Ctrl\Tippy.Ctrl.csproj" />
     <ProjectReference Include="..\Ckb.Rpc\Ckb.Rpc.csproj">
