Embedded gdb dashboard

--- a/src/Tippy.Ctrl/Tippy.Ctrl.csproj
+++ b/src/Tippy.Ctrl/Tippy.Ctrl.csproj
@@ -23,8 +23,10 @@
 
   <ItemGroup>
     <None Remove="ChainSpecTemplate.txt" />
+    <None Remove="GdbDashboard.txt" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="ChainSpecTemplate.txt" />
+    <EmbeddedResource Include="GdbDashboard.txt" />
   </ItemGroup>
 </Project>
