--- a/tools/osx/Info.plist
+++ b/tools/osx/Info.plist
@@ -9,9 +9,9 @@
     <key>CFBundleIconFile</key>
     <string>Tippy.icns</string>
     <key>CFBundleVersion</key>
-    <string>0.3.2</string>
+    <string>0.4.0-rc1</string>
     <key>CFBundleShortVersionString</key>
-    <string>0.3.2</string>
+    <string>0.4.0-rc1</string>
     <key>CFBundleExecutable</key>
     <string>main</string>
     <key>CFBundleInfoDictionaryVersion</key>
